# dessert-ad-studio

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.app  README.md  docker-compose.agentops.yml  docker-compose.gpu.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
api/: main.py
app/: streamlit_app.py
mcp_servers/: dessert_ad_studio_server.py
scripts/: a2a_smoke.py  agent_team_fast_gate.py  agentic_rag_approval_smoke.py  agentic_rag_cross_process_resume_smoke.py  agentic_rag_eval_guardrail.py  agentic_rag_graph_smoke.py  agentic_rag_mcp_server_smoke.py  agentic_rag_promptfoo_package_smoke.py  agentic_rag_retention_policy_smoke.py  agentic_rag_reviewer_ui_smoke.py  agentic_rag_run_metrics_smoke.py  agentic_rag_sqlite_checkpoint_smoke.py  agentic_rag_stream_smoke.py  agentic_rag_tools_smoke.py  agentic_rag_trace_smoke.py  agentic_rag_websocket_smoke.py  analyze_provider_gate_failure.py  api_smoke.py  build_agentic_rag_decision_register.py  build_agentic_rag_eval_report.py  build_agentic_rag_final_readiness.py  build_demo_gallery.py  build_demo_video_storyboard.py  build_provider_visual_review.py  build_real_sample_preservation_evidence.py  cost_guard_smoke.py  eval_demo_samples.py  eval_marketing_context.py  eval_pgvector_marketing_context.py  eval_product_like_samples.py  eval_rag_chunking_strategies.py  eval_visual_quality.py  export_template_scorer_onnx.py  flux2_smoke.py  generation_job_smoke.py  k8s_async_failure_smoke.py  k8s_live_smoke.py  openai_image_edit_preservation_smoke.py  openai_smoke.py  (+7 more)
(+244 files in other folders)
