[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dessert-ad-studio"
version = "0.1.0"
description = "Cafe and dessert ad generation prototype with Streamlit, FastAPI, Triton, and FLUX.2-ready backend adapters."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "streamlit>=1.35",
  "pydantic>=2.7",
  "pillow>=10.3",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "numpy>=1.26",
  "onnx>=1.16",
  "tritonclient[http]>=2.45",
  "openai>=2.8",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
image = [
  "torch>=2.3",
  "diffusers>=0.31",
  "transformers>=4.44",
  "accelerate>=0.33",
  "safetensors>=0.4",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  # Official httpx successor (github.com/pydantic/httpx2, Tom Christie / Pydantic Services);
  # starlette>=1.2 testclient imports httpx2 and deprecates httpx.
  "httpx2>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
